--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.5",
+    "leaflet": "^1.6.0",
+    "proj4leaflet": "^1.0.2",
     "lodash": "^4.17.15",
     "mockjs": "^1.1.0",
     "vue": "^2.5.16",
